优化获取用户信息